err/cryptobox-server.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cryptobox'...
Listing './lib/python3.5/site-packages/cryptobox/core'...
Compiling './lib/python3.5/site-packages/cryptobox/core/container.py'...
***   File "./lib/python3.5/site-packages/cryptobox/core/container.py", line 519
    os.chmod(self.__get_mount_point(), 0777)
                                          ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/cryptobox/core/settings.py'...
***   File "./lib/python3.5/site-packages/cryptobox/core/settings.py", line 121
    except OSError, err_msg:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cryptobox/plugins'...
Compiling './lib/python3.5/site-packages/cryptobox/plugins/base.py'...
***   File "./lib/python3.5/site-packages/cryptobox/plugins/base.py", line 103
    raise Exception, \
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cryptobox/plugins/manage.py'...
***   File "./lib/python3.5/site-packages/cryptobox/plugins/manage.py", line 106
    print "Plugin: %s" % one_plugin.get_name()
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cryptobox/tests'...
Compiling './lib/python3.5/site-packages/cryptobox/tests/tools.py'...
***   File "./lib/python3.5/site-packages/cryptobox/tests/tools.py", line 51
    raise Exception, "no valid device for testing found"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cryptobox/web'...
Compiling './lib/python3.5/site-packages/cryptobox/web/sites.py'...
***   File "./lib/python3.5/site-packages/cryptobox/web/sites.py", line 39
    raise ImportError, _ERRMSG
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/cryptobox-server'...
Listing './share/cryptobox-server/plugins'...
Listing './share/cryptobox-server/plugins/date'...
Compiling './share/cryptobox-server/plugins/date/date.py'...
Compiling './share/cryptobox-server/plugins/date/root_action.py'...
Compiling './share/cryptobox-server/plugins/date/unittests.py'...
Listing './share/cryptobox-server/plugins/disks'...
Compiling './share/cryptobox-server/plugins/disks/disks.py'...
Compiling './share/cryptobox-server/plugins/disks/unittests.py'...
Listing './share/cryptobox-server/plugins/encrypted_webinterface'...
Compiling './share/cryptobox-server/plugins/encrypted_webinterface/encrypted_webinterface.py'...
***   File "./share/cryptobox-server/plugins/encrypted_webinterface/encrypted_webinterface.py", line 130
    os.chmod(cert_abs_name, 0600)
                               ^
SyntaxError: invalid token

Compiling './share/cryptobox-server/plugins/encrypted_webinterface/root_action.py'...
Compiling './share/cryptobox-server/plugins/encrypted_webinterface/unittests.py'...
Listing './share/cryptobox-server/plugins/help'...
Compiling './share/cryptobox-server/plugins/help/help.py'...
Compiling './share/cryptobox-server/plugins/help/unittests.py'...
Listing './share/cryptobox-server/plugins/language_selection'...
Compiling './share/cryptobox-server/plugins/language_selection/language_selection.py'...
Compiling './share/cryptobox-server/plugins/language_selection/unittests.py'...
Listing './share/cryptobox-server/plugins/logs'...
Compiling './share/cryptobox-server/plugins/logs/logs.py'...
***   File "./share/cryptobox-server/plugins/logs/logs.py", line 165
    except (OverflowError, TypeError, ValueError, IndexError), err_msg:
                                                             ^
SyntaxError: invalid syntax

Compiling './share/cryptobox-server/plugins/logs/unittests.py'...
Listing './share/cryptobox-server/plugins/network'...
Compiling './share/cryptobox-server/plugins/network/network.py'...
Compiling './share/cryptobox-server/plugins/network/root_action.py'...
Compiling './share/cryptobox-server/plugins/network/unittests.py'...
***   File "./share/cryptobox-server/plugins/network/unittests.py", line 47
    def set_ip((ip1, ip2, ip3, ip4)):
               ^
SyntaxError: invalid syntax

Listing './share/cryptobox-server/plugins/partition'...
Compiling './share/cryptobox-server/plugins/partition/partition.py'...
***   File "./share/cryptobox-server/plugins/partition/partition.py", line 509
    except (CBInvalidType, CBCreateError, CBVolumeIsActive), err_msg:
                                                           ^
SyntaxError: invalid syntax

Compiling './share/cryptobox-server/plugins/partition/root_action.py'...
Compiling './share/cryptobox-server/plugins/partition/unittests.py'...
Listing './share/cryptobox-server/plugins/plugin_manager'...
Compiling './share/cryptobox-server/plugins/plugin_manager/plugin_manager.py'...
***   File "./share/cryptobox-server/plugins/plugin_manager/plugin_manager.py", line 63
    except IOError, err_msg:
                  ^
SyntaxError: invalid syntax

Compiling './share/cryptobox-server/plugins/plugin_manager/unittests.py'...
Listing './share/cryptobox-server/plugins/shutdown'...
Compiling './share/cryptobox-server/plugins/shutdown/root_action.py'...
Compiling './share/cryptobox-server/plugins/shutdown/shutdown.py'...
Compiling './share/cryptobox-server/plugins/shutdown/unittests.py'...
Listing './share/cryptobox-server/plugins/system_preferences'...
Compiling './share/cryptobox-server/plugins/system_preferences/system_preferences.py'...
Compiling './share/cryptobox-server/plugins/system_preferences/unittests.py'...
Listing './share/cryptobox-server/plugins/user_manager'...
Compiling './share/cryptobox-server/plugins/user_manager/unittests.py'...
Compiling './share/cryptobox-server/plugins/user_manager/user_manager.py'...
Listing './share/cryptobox-server/plugins/volume_automount'...
Compiling './share/cryptobox-server/plugins/volume_automount/unittests.py'...
Compiling './share/cryptobox-server/plugins/volume_automount/volume_automount.py'...
Listing './share/cryptobox-server/plugins/volume_chpasswd'...
Compiling './share/cryptobox-server/plugins/volume_chpasswd/unittests.py'...
Compiling './share/cryptobox-server/plugins/volume_chpasswd/volume_chpasswd.py'...
***   File "./share/cryptobox-server/plugins/volume_chpasswd/volume_chpasswd.py", line 75
    except CBInvalidType, err_msg:
                        ^
SyntaxError: invalid syntax

Listing './share/cryptobox-server/plugins/volume_details'...
Compiling './share/cryptobox-server/plugins/volume_details/unittests.py'...
Compiling './share/cryptobox-server/plugins/volume_details/volume_details.py'...
Listing './share/cryptobox-server/plugins/volume_format_fs'...
Compiling './share/cryptobox-server/plugins/volume_format_fs/unittests.py'...
Compiling './share/cryptobox-server/plugins/volume_format_fs/volume_format_fs.py'...
***   File "./share/cryptobox-server/plugins/volume_format_fs/volume_format_fs.py", line 97
    except CBContainerError, err_msg:
                           ^
SyntaxError: invalid syntax

Listing './share/cryptobox-server/plugins/volume_mount'...
Compiling './share/cryptobox-server/plugins/volume_mount/unittests.py'...
Compiling './share/cryptobox-server/plugins/volume_mount/volume_mount.py'...
***   File "./share/cryptobox-server/plugins/volume_mount/volume_mount.py", line 74
    except CBMountError, err_msg:
                       ^
SyntaxError: invalid syntax

Listing './share/cryptobox-server/plugins/volume_props'...
Compiling './share/cryptobox-server/plugins/volume_props/unittests.py'...
Compiling './share/cryptobox-server/plugins/volume_props/volume_props.py'...
Listing './share/cryptobox-server/plugins/volume_rename'...
Compiling './share/cryptobox-server/plugins/volume_rename/unittests.py'...
Compiling './share/cryptobox-server/plugins/volume_rename/volume_rename.py'...
Listing './share/cryptobox-server/templates'...
Listing './share/cryptobox-server/www-data'...
Listing './share/cryptobox-server/www-data/screenshots'...
Listing './share/cryptobox-server/www-data/screenshots/v0.3'...
Listing './share/python-wheels'...
